WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314376
sibling-index() in @keyframes doesn't re-resolve when siblings change
https://bugs.webkit.org/show_bug.cgi?id=314376
Summary
sibling-index() in @keyframes doesn't re-resolve when siblings change
Ahmad Saleem
Reported
2026-05-08 00:18:01 PDT
ssia - progresses WPT.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-08 00:18:10 PDT
<
rdar://problem/176531901
>
Ahmad Saleem
Comment 2
2026-05-08 00:20:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64527
EWS
Comment 3
2026-05-08 10:13:28 PDT
Committed
312895@main
(ef00a2bc79a5): <
https://commits.webkit.org/312895@main
> Reviewed commits have been landed. Closing PR #64527 and removing active labels.
Ahmad Saleem
Comment 4
2026-05-08 10:29:50 PDT
***
Bug 300697
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug